--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.4.6
   hive_generator: ^1.1.3
+  change_app_package_name: ^1.4.0
   mocktail: ^1.0.4
   hive_test: ^1.0.1
   http_mock_adapter: ^0.6.1
